--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -4,28 +4,49 @@
     <div class="container" id="wishlists-page">
 
         <div class="jumbotron">
-            <h1><i class="fas fa-star"></i> Wishlists</h1>
-            <p class="lead">The most wishlisted items on Game DB</p>
-            <small>To see a limited but more accurate list, see the <a href="https://store.steampowered.com/search/?filter=popularwishlist" target="_blank">Steam store list</a>.</small>
+            <div class="row">
+
+                <div class="col-sm-12 col-lg-6">
+
+                    <h1><i class="fas fa-star"></i> Wishlists</h1>
+
+                </div>
+                <div class="col-sm-12 col-lg-6">
+
+                    <div class="input-group input-group-lg mt-1 mb-2">
+                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus>
+                        <div class="input-group-append">
+                            <input type="submit" value="Search" class="input-group-text">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12">
+                    <p class="lead">The most wishlisted items on Game DB</p>
+                    <small>To see a limited but more accurate list, see the <a href="https://store.steampowered.com/search/?filter=popularwishlist" target="_blank">Steam store list</a>.</small>
+                </div>
+
+            </div>
+
         </div>
 
         {{ template "_flashes" . }}
 
         <div class="card">
-            <div class="card-header">
+            {{/*            <div class="card-header">*/}}
 
-                <ul class="nav nav-tabs card-header-tabs" role="tablist">
+            {{/*                <ul class="nav nav-tabs card-header-tabs" role="tablist">*/}}
 
-                    <li class="nav-item">
-                        <a class="nav-link active" data-toggle="tab" href="#apps" role="tab">Apps</a>
-                    </li>
+            {{/*                    <li class="nav-item">*/}}
+            {{/*                        <a class="nav-link active" data-toggle="tab" href="#apps" role="tab">Apps</a>*/}}
+            {{/*                    </li>*/}}
 
-                    <li class="nav-item">
-                        <a class="nav-link" data-toggle="tab" href="#tags" role="tab">Tags</a>
-                    </li>
+            {{/*                    <li class="nav-item">*/}}
+            {{/*                        <a class="nav-link" data-toggle="tab" href="#tags" role="tab">Tags</a>*/}}
+            {{/*                    </li>*/}}
 
-                </ul>
-            </div>
+            {{/*                </ul>*/}}
+            {{/*            </div>*/}}
 
             <div class="card-body">
 
@@ -35,11 +56,16 @@
                     <div class="tab-pane show active" id="apps" role="tabpanel">
 
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped" data-ordering="false" data-path="/wishlists/apps.json">
+                            <table class="table table-hover table-striped" data-path="/wishlists/apps.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col">App</th>
-                                    <th scope="col">Players</th>
+                                    <th scope="col">Wishlists</th>
+                                    <th scope="col">Avg Position</th>
+                                    <th scope="col">Followers</th>
+                                    <th scope="col">Price</th>
+                                    <th scope="col">Release Date</th>
+                                    <th scope="col"></th>
                                 </tr>
                                 </thead>
                                 <tbody>
@@ -54,7 +80,7 @@
                     <div class="tab-pane" id="tags" role="tabpanel">
 
                         <div class="table-responsive mb-0">
-                            <table class="table table-hover table-striped" data-ordering="false" data-path="/wishlists/tags.json">
+                            <table class="table table-hover table-striped" data-path="/wishlists/tags.json">
                                 <thead class="thead-light">
                                 <tr>
                                     <th scope="col" style="width: 50%;">Tag</th>
