--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -129,6 +129,7 @@
                             <a class="dropdown-item" href="/new-releases">New Releases</a>
                             {{/*<a class="dropdown-item" href="/apps/trending">Trending</a>*/}}
                             <a class="dropdown-item" href="/achievements">Achievements</a>
+                            <a class="dropdown-item" href="/wishlists">Wishlists</a>
 
                             <div class="dropdown-divider"></div>
 
