--- a/cmd/webserver/templates/donate.gohtml
+++ b/cmd/webserver/templates/donate.gohtml
@@ -4,7 +4,7 @@
     <div class="container" id="donate-page">
 
         <div class="jumbotron">
-            <h1><i class="fas fa-heart text-danger"></i> Donate</h1>
+            <h1><i class="fas fa-heart text-danger"></i> Upgrade</h1>
             <p class="lead mb-2">{{ .Description }} Donations will go towards a new extra quick site-wide search,
                 high definition charts, tracking every currency, faster hosting & more!</p>
 
