--- a/cmd/webserver/templates/badge.gohtml
+++ b/cmd/webserver/templates/badge.gohtml
@@ -39,6 +39,7 @@
                             <th scope="col">Player</th>
                             <th scope="col">Level</th>
                             <th scope="col">Achieved</th>
+                            <th scope="col"></th>
                         </tr>
                         </thead>
                         <tbody>
