Add players dropdown

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -145,8 +145,15 @@
                         </div>
                     </li>
 
-                    <li class="nav-item {{if startsWith .Path "/players" }}active{{end}}">
-                        <a class="nav-link" href="/players">Players</a>
+                    <li class="nav-item dropdown {{if startsWith .Path "/players" }}active{{end}}">
+                        <a class="nav-link dropdown-toggle d-lg-none" href="#" data-toggle="dropdown">Players</a>
+                        <a class="nav-link dropdown-toggle d-none d-lg-block" href="/players" data-toggle="dropdown">Players</a>
+                        <div class="dropdown-menu">
+
+                            <a class="dropdown-item" href="/players">Players</a>
+                            <a class="dropdown-item" href="/players/add">Add Player</a>
+
+                        </div>
                     </li>
 
                     <li class="nav-item {{if startsWith .Path "/sales" }}active{{end}}">
