--- a/cmd/webserver/templates/settings.gohtml
+++ b/cmd/webserver/templates/settings.gohtml
@@ -100,7 +100,7 @@
                                     <div class="card-header">Connections</div>
                                     <div class="card-body">
 
-                                        {{ if eq .User.SteamID 0 }}
+                                        {{ if eq .User.SteamID.String "" }}
                                             <form action="https://steamcommunity.com/openid/login" method="post">
                                                 <input type="hidden" name="openid.identity" value="http://specs.openid.net/auth/2.0/identifier_select">
                                                 <input type="hidden" name="openid.claimed_id" value="http://specs.openid.net/auth/2.0/identifier_select">
@@ -123,7 +123,7 @@
                                         {{ end }}
 
                                         <p>
-                                            {{ if eq .User.PatreonID "" }}
+                                            {{ if eq .User.PatreonID.String "" }}
                                                 <a href="/settings/link-patreon" role="button" class="btn btn-success btn-sm">
                                                     <i class="fab fa-patreon"></i> Link Patreon Account
                                                 </a>
@@ -135,7 +135,7 @@
                                         </p>
 
                                         <p>
-                                            {{ if eq .User.DiscordID "" }}
+                                            {{ if eq .User.DiscordID.String "" }}
                                                 <a href="/settings/link-discord" role="button" class="btn btn-success btn-sm">
                                                     <i class="fab fa-discord"></i> Link Discord Account
                                                 </a>
@@ -147,7 +147,7 @@
                                         </p>
 
                                         <p class="mb-0">
-                                            {{ if eq .User.GoogleID "" }}
+                                            {{ if eq .User.GoogleID.String "" }}
                                                 <a href="/settings/link-google" role="button" class="btn btn-success btn-sm">
                                                     <i class="fab fa-google"></i> Link Google Account
                                                 </a>
