Fix player link

--- a/cmd/webserver/templates/player.gohtml
+++ b/cmd/webserver/templates/player.gohtml
@@ -12,7 +12,7 @@
             <h1 class="text-truncate"><i class="fas fa-user"></i> {{ .Player.PersonaName }}</h1>
 
             <small>
-                <a target="_blank" href="{{ .Player.CommunityLink }}"><i class="fab fa-steam-square"></i> Steam Profile: {{ .Player.VanintyURL }}</a>
+                <a target="_blank" href="{{ .Player.CommunityLink }}"><i class="fab fa-steam-square"></i> Steam Community Profile</a>
             </small>
 
         </div>
