--- a/cmd/webserver/assets/sass/_login.scss
+++ b/cmd/webserver/assets/sass/_login.scss
@@ -19,7 +19,11 @@
         }
 
         .fa-google {
-            color: #DB4437;
+            color: #4285F4;
+        }
+
+        .fa-github {
+            color: #4078c0;
         }
     }
 }
