Fix GitHub colour

--- a/cmd/webserver/assets/sass/_app.scss
+++ b/cmd/webserver/assets/sass/_app.scss
@@ -52,6 +52,7 @@
             width: 100%;
             margin-bottom: 1px;
             display: block;
+            background-color: #1b2738;
         }
 
         img:last-of-type, video:last-of-type {
