--- a/cmd/webserver/assets/sass/_avatars.scss
+++ b/cmd/webserver/assets/sass/_avatars.scss
@@ -202,6 +202,18 @@
     background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_5.png&output=webp)
 }
 
+.avatar2.lvl_5000 {
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_halftone_1.png&output=webp);
+}
+
+.avatar2.lvl_5100 {
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_halftone_2.png&output=webp);
+}
+
+.avatar2.lvl_5200 {
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_halftone_3.png&output=webp);
+}
+
 .avatar2.lvl_plus_10 {
     background-position: 0 -32px
 }
