--- a/cmd/webserver/templates/categories.gohtml
+++ b/cmd/webserver/templates/categories.gohtml
@@ -28,7 +28,7 @@
             <div class="card-body">
 
                 <div class="table-responsive">
-                    <table class="table table-hover table-striped mb-0" data-order='[[3, "desc"], [1, "desc"]]'>
+                    <table class="table table-hover table-striped mb-0" data-order='[[1, "desc"]]'>
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">Category</th>
