--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -251,6 +251,18 @@
                                             </tr>
                                         {{ end }}
 
+                                        {{ if ne .App.GetMicroTrailer "" }}
+                                            <tr>
+                                                <th scope="row">Micro Trailer</th>
+                                                <td>
+                                                    <video controls preload="metadata">
+                                                        <source src="{{ https (.App.GetMicroTrailer) }}" type="video/webm">
+                                                        Sorry, your browser doesn't support embedded videos.
+                                                    </video>
+                                                </td>
+                                            </tr>
+                                        {{ end }}
+
                                     </table>
                                 </div>
 
