--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -716,7 +716,7 @@
 
                     <div class="tab-pane" id="similar" role="tabpanel">
 
-                        <h5>Similar by tag</h5>
+                        <h5>Similar by Tag</h5>
 
                         <div class="table-responsive" style="height: auto;">
                             <table class="table table-hover table-striped">
