Move webserver packages to mongo

--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -668,7 +668,7 @@
                                             <td>{{ .GetBillingType }}</td>
                                             <td>{{ .GetLicenseType }}</td>
                                             <td>{{ .GetStatus }}</td>
-                                            <td>{{ comma (len .GetAppIDs) }}</td>
+                                            <td>{{ comma (len .Apps) }}</td>
                                         </tr>
                                     {{ end }}
                                 </table>
