Fix wishlists js

--- a/cmd/webserver/templates/wishlists.gohtml
+++ b/cmd/webserver/templates/wishlists.gohtml
@@ -77,23 +77,23 @@
                     </div>
 
                     {{/* Tags */}}
-                    <div class="tab-pane" id="tags" role="tabpanel">
+                    {{/*                    <div class="tab-pane" id="tags" role="tabpanel">*/}}
 
-                        <div class="table-responsive mb-0">
-                            <table class="table table-hover table-striped" data-path="/wishlists/tags.json">
-                                <thead class="thead-light">
-                                <tr>
-                                    <th scope="col" style="width: 50%;">Tag</th>
-                                    <th scope="col">Players</th>
-                                </tr>
-                                </thead>
-                                <tbody>
+                    {{/*                        <div class="table-responsive mb-0">*/}}
+                    {{/*                            <table class="table table-hover table-striped" data-path="/wishlists/tags.json">*/}}
+                    {{/*                                <thead class="thead-light">*/}}
+                    {{/*                                <tr>*/}}
+                    {{/*                                    <th scope="col" style="width: 50%;">Tag</th>*/}}
+                    {{/*                                    <th scope="col">Players</th>*/}}
+                    {{/*                                </tr>*/}}
+                    {{/*                                </thead>*/}}
+                    {{/*                                <tbody>*/}}
 
-                                </tbody>
-                            </table>
-                        </div>
+                    {{/*                                </tbody>*/}}
+                    {{/*                            </table>*/}}
+                    {{/*                        </div>*/}}
 
-                    </div>
+                    {{/*                    </div>*/}}
 
                 </div>
 
