Fix coop template

--- a/cmd/webserver/templates/coop.gohtml
+++ b/cmd/webserver/templates/coop.gohtml
@@ -81,7 +81,7 @@
                                         </div>
                                     </td>
                                     <td class="platforms">{{ .Game.GetPlatformImages }}</td>
-                                    <td>{{ comma (len .Game.GetAchievements) }}</td>
+                                    <td>{{ comma .Game.AchievementsCount }}</td>
                                     <td>{{.Tags}}</td>
                                 </tr>
                             {{ end }}
