--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="card-footer">
-                        <a href="/new-releases">More New Released</a>
+                        <a href="/new-releases">More Releases</a>
                     </div>
                 </div>
 
